--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=app
+spring.application.name=AnotherLibraryManagementSystem
+spring.datasource.url=jdbc:h2:file:./data/h2db
+spring.datasource.driverClassName=org.h2.Driver
