--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=AnotherLibraryManagementSystem
-spring.datasource.url=jdbc:h2:file:./data/h2db
+spring.datasource.url=jdbc:h2:file:./data/h2db;DATABASE_TO_UPPER=false
 spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
