--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=AnotherLibraryManagementSystem
 spring.datasource.url=jdbc:h2:file:./data/h2db;DATABASE_TO_UPPER=false
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jackson.property-naming-strategy=SNAKE_CASE
